src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hotfix_trial__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hotfix_trial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Neo_issue__c</fullName>
        <label>Neo_issue</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Copado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Training_Copado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>autoresolve_demo__c</fullName>
        <label>autoresolve_demo</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>customfield_Script__c</fullName>
        <defaultValue>false</defaultValue>
        <label>customfield_Script</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dual_demo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>dual_demo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>autoresolve_demo__c</fullName>
        <label>autoresolve_demo</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>